# tlpi-rust

./: .gitignore  Cargo.toml
common/: Cargo.toml
common/src/: constants.rs  data_types.rs  lib.rs
error/: Cargo.toml  build.rs
error/src/: error_functions.rs  error_text.c  error_text.rs  lib.rs
fileio/: Cargo.toml
fileio/src/: dup_by_fcntl.rs  lib.rs  syscalls.rs
syscall/: Cargo.toml
syscall/src/: fileio.rs  fs.rs  io.rs  lib.rs  ps.rs
