[package]
name = "fileio"
version = "0.1.0"
authors = ["yuichi-morisaki <yuichi.morisaki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
error = { path = "../error" }

clap = "2.33"
